# cuda-dr-bcg

./: .gitignore  CMakeLists.txt  Makefile  README.md  dr-bcg.cu  dr-bcg.h  helper.h  run_dr-bcg.slurm
benchmark/: CMakeLists.txt  dr_bcg_benchmark.cu
examples/: CMakeLists.txt  README.md  example.cpp
examples/1_random_data/: CMakeLists.txt
examples/1_read_mat_file/: CMakeLists.txt  README.md  read_mat_file.cu
examples/2_preconditioned/: CMakeLists.txt  README.md  preconditioned.cu
examples/2_read_bin_file/: CMakeLists.txt
examples/3_read_mat_file/: CMakeLists.txt  read_mat_file.cu
examples/4_preconditioned/: CMakeLists.txt  preconditioned.cu
examples/example_0/: CMakeLists.txt  example_0.cpp
examples/example_1/: CMakeLists.txt  example_1.cpp
examples/example_2/: CMakeLists.txt  README.md  example_2.cu
include/: dr-bcg.h
include/dr_bcg/: debug.h  device_buffer.h  dr-bcg.h  dr_bcg.h  helper.h
scripts/: check_against_suitesparse.slurm  profile_example.slurm  profile_example_2.slurm  run_dr-bcg.slurm  run_dr_bcg.slurm  run_dr_bcg_benchmarks.slurm  run_microbenchmarks.slurm
scripts/mat_parser/: read_mat.py
scripts/run_mat/: run_mat.py  test_runner.py
src/: CMakeLists.txt  device_buffer.cu  dr-bcg.cu  dr_bcg.cu  helper.cu
test/: CMakeLists.txt  dr_bcg_test.cpp  dr_bcg_test.cu  iterations_check.cpp
